--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,15 @@
 		"ext-json": "*",
 		"galbar/jsonpath": "^1.0",
 		"guzzlehttp/guzzle": "^6.0",
-		"symfony/http-foundation": "^4.2"
+		"symfony/http-foundation": "^4.0",
+		"symfony/config": "^4.0",
+		"symfony/dependency-injection": "^4.0",
+		"symfony/http-kernel": "^4.0"
+	},
+	"require-dev": {
+		"symfony/framework-bundle": "^4.0",
+		"symfony/phpunit-bridge": "^4.0",
+		"symfony/browser-kit": "^4.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -25,8 +33,5 @@
 		"psr-4": {
 			"Hurnell\\PostcodeApiBundle\\Tests\\": "tests/"
 		}
-	},
-	"require-dev": {
-		"symfony/phpunit-bridge": "^4.2"
 	}
 }
