--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,13 @@
 		"ext-json": "*",
 		"galbar/jsonpath": "^1.0",
 		"guzzlehttp/guzzle": "^6.0",
-		"symfony/http-foundation": "^4.0",
-		"symfony/config": "^4.0",
-		"symfony/dependency-injection": "^4.0",
-		"symfony/http-kernel": "^4.0"
+		"symfony/http-foundation": "^3.4 || ^4.0",
+		"symfony/config": "^3.4 || ^4.0",
+		"symfony/dependency-injection": "^3.4 || ^4.0",
+		"symfony/http-kernel": "^3.4 || ^4.0"
 	},
 	"require-dev": {
-		"symfony/framework-bundle": "^4.0",
-		"symfony/phpunit-bridge": "^4.0",
-		"symfony/browser-kit": "^4.0"
+		"symfony/phpunit-bridge": "^3.4 || ^4.0"
 	},
 	"autoload": {
 		"psr-4": {
