--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,9 @@ matrix:
 
             # Test the latest stable release1
         - php: 7.1
+          env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text --coverage-clover build/logs/clover.xml"
         - php: 7.2
+          env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text --coverage-clover build/logs/clover.xml"
         - php: 7.3
           env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text --coverage-clover build/logs/clover.xml"
 
@@ -51,7 +53,7 @@ install:
     - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
     - ./vendor/bin/simple-phpunit install
     - composer require php-coveralls/php-coveralls  --dev
-    -
+
 before_script:
     - mkdir -p build/logs
     - composer install
