--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,9 @@
 		"symfony/http-kernel": "^4.0"
 	},
 	"require-dev": {
-		"symfony/phpunit-bridge": "^4.0",
+		"phpunit/phpunit": "^7.0",
 		"matthiasnoback/symfony-dependency-injection-test": "^3.1.0"
+		
 	},
 	"autoload": {
 		"psr-4": {
