--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_install:
     - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi;
     - if ! [ -v "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi;
 
-install:
+install:code
     # To be removed when this issue will be resolved: https://github.com/composer/composer/issues/5355
     - if [[ "$COMPOSER_FLAGS" == *"--prefer-lowest"* ]]; then composer update --prefer-dist --no-interaction --prefer-stable --quiet; fi
     - composer require php-coveralls/php-coveralls
@@ -59,5 +59,5 @@ script:
     - ./vendor/bin/phpunit $PHPUNIT_FLAGS
 
 after_success:
-    - ./vendor/bin/coveralls -v
+    - php vendor/bin/coveralls -v
 
