--- a/.travis.yml
+++ b/.travis.yml
@@ -59,5 +59,5 @@ script:
     - ./vendor/bin/phpunit $PHPUNIT_FLAGS
 
 after_success:
-    - php vendor/bin/coveralls -v
+    - php vendor/bin/php-coveralls -v
 
