--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^7.5",
-		"matthiasnoback/symfony-dependency-injection-test": "^3.1.0"
+		"matthiasnoback/symfony-dependency-injection-test": "^3.1.0",
+		"php-coveralls/php-coveralls": "^2.1"
 		
 	},
 	"autoload": {
